test/tests/stages/11_long_integers/invalid_types/call_long_as_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  long
  identifier(x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  long
  identifier(x)
  =
  const int(0)
  ;
  return
  identifier(x)
  (
  )
  ;
  }
